--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ pnpm-debug.log*
 .env
 .env.production
 
+# database files
+*.db
+*.db-shm
+*.db-wal
+
 # macOS-specific files
 .DS_Store
 
@@ -25,3 +30,7 @@ pnpm-debug.log*
 
 # Local Netlify folder
 .netlify
+
+TUTORIAL.md
+
+.claude/
