added all models from AI Gatway to selector and cleaned up to astro defaults

--- a/.env.example
+++ b/.env.example
@@ -13,17 +13,20 @@ DATABASE_URL="file:./chat-memory.db"
 # DATABASE_URL="libsql://your-db-name.turso.io"
 # DATABASE_AUTH_TOKEN="your-auth-token"
 
-# Netlify AI Gateway (automatically provided in Netlify Functions)
-# These are set automatically by Netlify - no need to configure manually:
-# - OPENAI_API_KEY
-# - OPENAI_BASE_URL
-# - ANTHROPIC_API_KEY
-# - ANTHROPIC_BASE_URL
-# - GEMINI_API_KEY
-# - GOOGLE_GEMINI_BASE_URL
-
-# For local development testing (optional):
-# You can set your own API keys for local testing
-# OPENAI_API_KEY="sk-..."
-# ANTHROPIC_API_KEY="sk-ant-..."
-# GEMINI_API_KEY="..."
+# ========================================
+# Netlify AI Gateway
+# ========================================
+# AI provider credentials are AUTOMATICALLY provided by Netlify AI Gateway
+# when running via "netlify dev" or in production.
+#
+# Requirements:
+# 1. Deploy to production at least once (AI Gateway activates after first deploy)
+# 2. Use "netlify dev" for local development (NOT "npm run dev")
+#
+# The following environment variables are injected automatically:
+# - AI_GATEWAY (JSON config)
+# - OPENAI_API_KEY & OPENAI_BASE_URL
+# - ANTHROPIC_API_KEY & ANTHROPIC_BASE_URL
+# - GEMINI_API_KEY & GOOGLE_GEMINI_BASE_URL
+#
+# DO NOT manually configure these variables - let Netlify AI Gateway handle them.
